Bug 379877 - masked rows in spreadsheet not restored in project
Summary: masked rows in spreadsheet not restored in project
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-15 21:30 UTC by Stefan Gerlach
Modified: 2017-05-24 19:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Gerlach 2017-05-15 21:30:52 UTC
When saving a project containing a spreadsheet with masked rows, opening this project does not recover the masking.
Comment 1 Alexander Semke 2017-05-24 19:36:44 UTC
Git commit e4b7c5f41c31321f75d82756ecde5f3fe4dbf18d by Alexander Semke.
Committed on 24/05/2017 at 19:35.
Pushed by asemke into branch 'master'.

Correctly save and restore masked cells (Regression).
FIXED-IN: 2.5

M  +3    -0    ChangeLog
M  +2    -1    src/backend/core/column/Column.cpp

https://commits.kde.org/labplot/e4b7c5f41c31321f75d82756ecde5f3fe4dbf18d