Correctly save and restore masked cells (Regression).

BUG: 379877
FIXED-IN: 2.5